<resources>
    <string name="app_name">Exa_106_TextFieldFormatter</string>
    <string name="tvHeading">Textfield-Formatter</string>
    <string name="etInputTextHint">This is where your text goes</string>
    <string name="tvStyleText">Style:</string>
    <string name="tvSizeLabel">Size:</string>
    <string name="tvSizeValue">24</string>
    <string name="tvFontText">Font:</string>
    <string name="rbUbuntuText">Ubuntu</string>
    <string name="rbComicSansText">Comic Soon</string>
    <string name="rbRobotoText">Roboto</string>
    <string name="cbItalicText">italic</string>
    <string name="cbBoldText">bold</string>
</resources>
